catalog v2: improved mobile/desktop layout, sticky nav, back-to-top

--- a/catalog.html
+++ b/catalog.html
@@ -21,10 +21,13 @@ header { background: #FFFFFF; border-bottom: 1px solid #E2E8F0; padding: 2.5rem 
 .search-input { width: 100%; padding: 0.875rem 1rem; border: 2px solid #E2E8F0; border-radius: 12px; font-size: 0.95rem; font-family: inherit; background: #FFFFFF; transition: all 0.2s; }
 .search-input:focus { outline: none; border-color: #2B7DE9; box-shadow: 0 0 0 3px rgba(43,125,233,0.1); }
 .search-input::placeholder { color: #94A3B8; }
-.category-nav { display: flex; gap: 0.5rem; overflow-x: auto; padding: 0.5rem 0 1.5rem; margin-bottom: 1rem; -webkit-overflow-scrolling: touch; }
+.nav-wrap { position: sticky; top: 0; z-index: 100; background: #FAFBFC; padding-top: 0.5rem; margin: 0 -1rem; padding-left: 1rem; padding-right: 1rem; }
+.category-nav { display: flex; gap: 0.5rem; overflow-x: auto; padding: 0.5rem 0 1rem; -webkit-overflow-scrolling: touch; }
 .category-nav::-webkit-scrollbar { height: 0; }
 .category-pill { display: inline-block; padding: 0.5rem 1rem; background: #FFFFFF; color: #64748B; border: 1.5px solid #E2E8F0; border-radius: 24px; font-size: 0.75rem; font-weight: 700; text-decoration: none; white-space: nowrap; transition: all 0.2s; }
 .category-pill:hover { background: #2B7DE9; color: #FFFFFF; border-color: #2B7DE9; }
+.back-top { position: fixed; bottom: 1.5rem; right: 1.5rem; width: 44px; height: 44px; background: #2B7DE9; color: #FFFFFF; border: none; border-radius: 50%; font-size: 1.2rem; cursor: pointer; box-shadow: 0 2px 8px rgba(43,125,233,0.3); z-index: 99; display: flex; align-items: center; justify-content: center; text-decoration: none; transition: all 0.2s; }
+.back-top:hover { background: #1D6AD4; transform: scale(1.1); }
 .category-section { margin-bottom: 3rem; }
 .category-header { margin-bottom: 1.5rem; padding-bottom: 1rem; border-bottom: 2px solid #F1F5F9; }
 .category-title { font-size: 1.5rem; font-weight: 800; color: #0F172A; margin-bottom: 0.4rem; letter-spacing: -0.5px; }
@@ -70,7 +73,10 @@ footer { background: #0F172A; color: #94A3B8; padding: 2.5rem 0 2rem; margin-top
 .disclaimer { font-size: 0.8rem; line-height: 1.7; margin-bottom: 1.5rem; padding: 1.25rem; background: rgba(245,158,11,0.08); border: 1px solid rgba(245,158,11,0.2); border-radius: 12px; }
 .disclaimer-title { color: #F59E0B; font-weight: 800; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 1.5px; margin-bottom: 0.5rem; }
 .footer-meta { font-size: 0.7rem; color: #475569; }
-@media(max-width:640px){ .brand{font-size:2.25rem} .product-card{padding:1.25rem} .product-name{font-size:1.2rem} .mol-row{grid-template-columns:65px 1fr} .category-title{font-size:1.3rem} }
+@media(min-width:768px){ .container{max-width:760px;padding:0 2rem} .product-card{padding:2rem 2.25rem} .header-content{padding:0.5rem 0} .brand{font-size:3rem} .category-header{margin-bottom:2rem} .info-box{padding:1.25rem} .product-hook{padding:1rem 1.25rem} }
+@media(min-width:1024px){ .container{max-width:800px} }
+@media(max-width:640px){ .brand{font-size:2rem} .brand-full{font-size:0.7rem;letter-spacing:3px} .tagline{font-size:0.75rem;letter-spacing:1.5px} .product-card{padding:1.25rem;border-radius:12px;margin-bottom:1rem} .product-name{font-size:1.15rem} .product-hook{font-size:0.85rem;padding:0.6rem 0.75rem} .product-desc p{font-size:0.82rem} .mol-row{grid-template-columns:60px 1fr;gap:0.35rem} .mol-value{font-size:0.72rem} .category-title{font-size:1.25rem} .category-intro{font-size:0.8rem} .tags{gap:0.25rem} .tag{font-size:0.65rem;padding:0.2rem 0.5rem} .info-box{padding:0.75rem} .badge{font-size:0.6rem;padding:0.15rem 0.5rem} .stats-bar{font-size:0.75rem} .stats-sep{margin:0 0.5rem} .related{gap:0.3rem} .rel-link{font-size:0.7rem;padding:0.3rem 0.6rem} .search-input{font-size:0.9rem;padding:0.75rem 0.85rem} }
+@media(max-width:380px){ .brand{font-size:1.75rem} .product-name{font-size:1.05rem} .product-card{padding:1rem} .mol-row{grid-template-columns:55px 1fr} }
 </style>
 </head>
 <body>
@@ -91,7 +97,7 @@ footer { background: #0F172A; color: #94A3B8; padding: 2.5rem 0 2rem; margin-top
 <div class="search-section">
 <input type="text" class="search-input" id="searchInput" placeholder="Search 43 compounds by name...">
 </div>
-<nav class="category-nav">
+<div class="nav-wrap"><nav class="category-nav">
 <a href="#neuropeptides" class="category-pill">Neuropeptides</a>
 <a href="#glp-agonists" class="category-pill">GLP Receptor Agonists</a>
 <a href="#growth-hormone" class="category-pill">Growth Hormone Secretagogues</a>
@@ -102,7 +108,7 @@ footer { background: #0F172A; color: #94A3B8; padding: 2.5rem 0 2rem; margin-top
 <a href="#melanocortin" class="category-pill">Melanocortin System Research</a>
 <a href="#cosmetic" class="category-pill">Cosmetic</a>
 <a href="#advanced" class="category-pill">Tissue Protection</a>
-</nav>
+</nav></div>
 
 <section class="category-section" id="neuropeptides">
 <div class="category-header"><h2 class="category-title">Neuropeptides &amp; Cognitive Research</h2><p class="category-intro">Compounds shaping the frontier of neuroscience — from anxiolytic peptides to neurotrophic complexes.</p></div>
@@ -674,6 +680,8 @@ All products listed are intended for research and laboratory use only. Not for h
 <div class="footer-meta">February 2026 &middot; peptideresourcecenter.com</div>
 </div>
 </footer>
+
+<a href="#" class="back-top" aria-label="Back to top">&uarr;</a>
 
 <script>
 (function(){
