--- a/site.html
+++ b/site.html
@@ -134,25 +134,27 @@ a{text-decoration:none;color:inherit}
 @media(max-width:500px){.cat-tiles{grid-template-columns:repeat(2,1fr)}}
 
 /* Catalog */
-.catalog-header{display:flex;flex-wrap:wrap;align-items:center;gap:1rem;margin-bottom:1rem}
+.catalog-header{display:flex;flex-wrap:wrap;align-items:center;gap:1rem;margin-bottom:0.75rem}
 .search-box{flex:1;min-width:220px;padding:0.7rem 1rem;border:2px solid #e2e8f0;border-radius:10px;font-size:0.9rem;font-family:inherit;background:#fff;transition:border-color 0.2s}
 .search-box:focus{outline:none;border-color:#2B7DE9;box-shadow:0 0 0 3px rgba(43,125,233,0.1)}
-.filter-wrap{display:flex;gap:0.4rem;flex-wrap:nowrap;margin-bottom:1.5rem;overflow-x:auto;-webkit-overflow-scrolling:touch;padding-bottom:0.5rem}
-.filter-tab{padding:0.4rem 0.75rem;border:1.5px solid #e2e8f0;border-radius:20px;font-size:0.68rem;font-weight:700;font-family:inherit;background:#fff;color:#64748B;cursor:pointer;white-space:nowrap;transition:all 0.2s;min-height:32px}
-.filter-tab:hover{border-color:#94a3b8;color:#334155}
-.filter-tab.active{color:#fff;border-color:transparent}
+.product-count{font-size:0.78rem;color:#8E99A4;font-weight:600;white-space:nowrap}
+.filter-wrap{display:flex;gap:0.5rem;flex-wrap:nowrap;margin-bottom:1.5rem;overflow-x:auto;-webkit-overflow-scrolling:touch;padding-bottom:0.5rem;border-bottom:2px solid #e2e8f0}
+.filter-tab{padding:0.5rem 0.85rem;border:none;border-bottom:3px solid transparent;border-radius:0;font-size:0.7rem;font-weight:700;font-family:inherit;background:transparent;color:#8E99A4;cursor:pointer;white-space:nowrap;transition:all 0.2s;min-height:36px;margin-bottom:-2px;text-transform:uppercase;letter-spacing:0.5px}
+.filter-tab:hover{color:#334155}
+.filter-tab.active{color:#0A1628;border-bottom-color:#0A1628;background:transparent}
 .no-results{display:none;text-align:center;padding:3rem 1rem;color:#8E99A4;font-size:0.95rem}
-.product-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:0.75rem}
-.grid-card{background:#fff;border:1px solid #e2e8f0;border-radius:10px;transition:all 0.25s;display:flex;flex-direction:column;overflow:hidden;cursor:default}
-.grid-card:hover{box-shadow:0 8px 30px rgba(0,0,0,0.1);transform:translateY(-3px) scale(1.01)}
+.product-grid{display:grid;grid-template-columns:repeat(4,1fr);gap:1rem}
+.grid-card{background:#fff;border:1px solid #e2e8f0;border-radius:12px;transition:all 0.3s;display:flex;flex-direction:column;overflow:hidden;cursor:default;max-width:280px;width:100%;margin:0 auto}
+.grid-card:hover{box-shadow:0 12px 35px rgba(0,0,0,0.12);transform:translateY(-4px)}
+.grid-card:hover .gc-color-band{filter:brightness(1.08)}
 .grid-card.hidden{display:none}
-.gc-color-band{padding:0.6rem 0.75rem 0.4rem;display:flex;align-items:center;gap:0.4rem}
-.gc-color-band .ic{fill:#fff;width:18px;height:18px}
-.gc-cat-label{font-size:0.58rem;font-weight:700;text-transform:uppercase;letter-spacing:1px;color:#fff;opacity:0.9}
-.gc-body{padding:0.6rem 0.75rem 0.75rem;flex:1;display:flex;flex-direction:column}
-.gc-name{font-size:0.85rem;font-weight:800;color:#0A1628;line-height:1.25;margin-bottom:0.3rem}
-.gc-summary{font-size:0.72rem;color:#64748B;line-height:1.45;margin-bottom:0.5rem;flex:1;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
-.gc-view-btn{display:block;font-size:0.7rem;font-weight:700;text-align:center;padding:0.4rem;border:1.5px solid;border-radius:6px;transition:all 0.2s;cursor:pointer;background:none;font-family:inherit;min-height:32px;width:100%}
+.gc-color-band{padding:2rem 1rem;display:flex;align-items:center;justify-content:center;flex-direction:column;gap:0.5rem;min-height:130px;transition:filter 0.3s}
+.gc-color-band .ic{fill:#fff;width:48px;height:48px;opacity:0.95}
+.gc-cat-label{font-size:0.58rem;font-weight:700;text-transform:uppercase;letter-spacing:1.5px;color:#fff;opacity:0.85}
+.gc-body{padding:0.85rem 1rem 1rem;flex:1;display:flex;flex-direction:column}
+.gc-name{font-size:0.85rem;font-weight:800;color:#0A1628;line-height:1.25;margin-bottom:0.25rem;display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
+.gc-summary{font-size:0.75rem;color:#8E99A4;line-height:1.4;margin-bottom:0.65rem;flex:1;display:-webkit-box;-webkit-line-clamp:1;-webkit-box-orient:vertical;overflow:hidden}
+.gc-view-btn{display:block;font-size:0.7rem;font-weight:700;text-align:center;padding:0.45rem;border:1.5px solid;border-radius:8px;transition:all 0.2s;cursor:pointer;background:none;font-family:inherit;min-height:34px;width:100%}
 .gc-view-btn:hover{color:#fff !important}
 
 /* Detail modal */
@@ -171,8 +173,8 @@ a{text-decoration:none;color:inherit}
 .detail-storage{font-size:0.8rem;color:#64748B;line-height:1.7;margin-bottom:0.75rem;padding:0.75rem;background:#f8fafc;border-radius:8px;border-left:3px solid #06B6D4}
 
 @media(max-width:1100px){.product-grid{grid-template-columns:repeat(3,1fr)}}
-@media(max-width:768px){.product-grid{grid-template-columns:repeat(2,1fr)}}
-@media(max-width:480px){.product-grid{grid-template-columns:1fr}}
+@media(max-width:768px){.product-grid{grid-template-columns:repeat(2,1fr)}.gc-color-band{min-height:110px;padding:1.5rem 0.75rem}}
+@media(max-width:480px){.product-grid{grid-template-columns:repeat(2,1fr);gap:0.65rem}.gc-color-band{min-height:100px;padding:1.25rem 0.5rem}.gc-color-band .ic{width:40px;height:40px}.gc-body{padding:0.65rem 0.75rem 0.75rem}.gc-name{font-size:0.8rem}}
 
 /* Info sections */
 .info-section{padding:4rem 1.5rem}
@@ -419,6 +421,7 @@ footer{background:#0A1628;color:#8E99A4;padding:3rem 1.5rem 2rem}
 </div>
 <div class="catalog-header">
 <input type="text" class="search-box" id="searchInput" placeholder="Search products...">
+<span class="product-count" id="productCount">Showing 44 of 44 products</span>
 </div>
 <div class="filter-wrap" id="filterWrap">
 <button class="filter-tab active" data-cat="all">All (44)</button>
@@ -763,19 +766,21 @@ var matchSearch=!q||name.indexOf(q)>-1||fullName.indexOf(q)>-1;
 if(matchCat&&matchSearch){c.classList.remove("hidden");visible++;}else{c.classList.add("hidden");}
 }
 if(noRes)noRes.style.display=visible===0?"block":"none";
+var pc=document.getElementById("productCount");
+if(pc)pc.textContent="Showing "+visible+" of "+cards.length+" products";
 }
 
 function setActiveTab(cat){
 activeCat=cat;
 for(var j=0;j<tabs.length;j++){
-tabs[j].classList.remove("active");tabs[j].style.background="";tabs[j].style.color="";tabs[j].style.borderColor="";
+tabs[j].classList.remove("active");tabs[j].style.borderBottomColor="transparent";tabs[j].style.color="#8E99A4";tabs[j].style.background="transparent";
 }
 for(var j=0;j<tabs.length;j++){
 if(tabs[j].getAttribute("data-cat")===cat){
 tabs[j].classList.add("active");
 var color=tabs[j].getAttribute("data-color");
-if(color){tabs[j].style.background=color;tabs[j].style.color="#fff";tabs[j].style.borderColor=color;}
-else{tabs[j].style.background="#0A1628";tabs[j].style.color="#fff";tabs[j].style.borderColor="#0A1628";}
+if(color){tabs[j].style.borderBottomColor=color;tabs[j].style.color=color;}
+else{tabs[j].style.borderBottomColor="#0A1628";tabs[j].style.color="#0A1628";}
 break;
 }
 }
