--- a/site.html
+++ b/site.html
@@ -20,9 +20,9 @@ a{text-decoration:none;color:inherit}
 .site-header{position:sticky;top:0;z-index:1000;background:rgba(255,255,255,0.97);-webkit-backdrop-filter:blur(12px);backdrop-filter:blur(12px);border-bottom:1px solid #e2e8f0;padding:0.6rem 0}
 .header-inner{max-width:1280px;margin:0 auto;padding:0 1.5rem;display:flex;align-items:center;justify-content:space-between}
 .logo-area{display:flex;flex-direction:column}
-.logo-name{font-size:1.35rem;font-weight:900;color:#0A1628;letter-spacing:-0.5px;line-height:1.1}
+.logo-name{font-size:1.4rem;font-weight:900;color:#0A1628;letter-spacing:-0.5px;line-height:1.1}
 .logo-name span{color:#2B7DE9}
-.logo-sub{font-size:0.55rem;text-transform:uppercase;letter-spacing:3px;color:#8E99A4;margin-top:1px}
+.logo-sub{font-size:0.6rem;text-transform:uppercase;letter-spacing:3px;color:#2B7DE9;font-weight:700;margin-top:2px;border-top:1.5px solid #2B7DE9;padding-top:2px;display:inline-block}
 .nav-links{display:flex;gap:1.25rem;font-size:0.82rem;font-weight:600;color:#64748B;align-items:center}
 .nav-links a:hover{color:#2B7DE9}
 .nav-links a.nav-cta{color:#fff;background:linear-gradient(135deg,#2B7DE9,#06B6D4);padding:0.4rem 1rem;border-radius:8px;font-weight:700;transition:opacity 0.2s}
@@ -37,32 +37,27 @@ a{text-decoration:none;color:inherit}
 @media(max-width:768px){.nav-links{display:none}}
 
 /* Hero */
-.hero{background:linear-gradient(135deg,#0A1628 0%,#0d2847 30%,#1a2744 60%,#0A1628 100%);color:#fff;padding:5rem 1.5rem 4rem;text-align:center;position:relative;overflow:hidden}
-.hero::before{content:"";position:absolute;top:-50%;right:-20%;width:70%;height:200%;background:radial-gradient(ellipse,rgba(43,125,233,0.2) 0%,transparent 70%);pointer-events:none;animation:hg1 6s ease-in-out infinite alternate}
-.hero::after{content:"";position:absolute;bottom:-40%;left:-20%;width:60%;height:180%;background:radial-gradient(ellipse,rgba(139,92,246,0.12) 0%,transparent 70%);pointer-events:none;animation:hg2 8s ease-in-out infinite alternate}
-@keyframes hg1{0%{transform:translate(0,0);opacity:0.5}100%{transform:translate(-30px,20px);opacity:1}}
-@keyframes hg2{0%{transform:translate(0,0);opacity:0.4}100%{transform:translate(20px,-15px);opacity:0.9}}
-.hero-geo{position:absolute;top:15%;right:5%;width:200px;height:200px;border:1px solid rgba(43,125,233,0.15);border-radius:50%;pointer-events:none;animation:spin 30s linear infinite}
-.hero-geo2{position:absolute;bottom:10%;left:8%;width:120px;height:120px;border:1px solid rgba(6,182,212,0.1);transform:rotate(45deg);pointer-events:none}
-.hero-geo3{position:absolute;top:40%;left:15%;width:60px;height:60px;border:1px solid rgba(139,92,246,0.1);border-radius:50%;pointer-events:none;animation:spin 20s linear infinite reverse}
-@keyframes spin{to{transform:rotate(360deg)}}
+.hero{background:#0A1628;color:#fff;padding:5.5rem 1.5rem 4.5rem;text-align:center;position:relative;overflow:hidden}
+.hero::before{content:"";position:absolute;top:0;left:0;right:0;bottom:0;background:linear-gradient(160deg,transparent 30%,rgba(43,125,233,0.08) 50%,transparent 70%);pointer-events:none}
+.hero::after{content:"";position:absolute;bottom:0;left:0;right:0;height:1px;background:linear-gradient(90deg,transparent,#2B7DE9,#06B6D4,transparent);pointer-events:none}
+.hero-geo,.hero-geo2,.hero-geo3{display:none}
 .hero-inner{max-width:850px;margin:0 auto;position:relative;z-index:1}
-.hero h1{font-size:3.2rem;font-weight:900;letter-spacing:-2px;line-height:1.05;margin-bottom:0.5rem}
-.hero h1 .gradient-text{background:linear-gradient(135deg,#2B7DE9,#06B6D4,#8B5CF6);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
-.hero-tagline{font-size:1.1rem;color:#06B6D4;font-weight:600;letter-spacing:2px;text-transform:uppercase;margin-bottom:0.75rem}
-.hero-subtitle{font-size:1rem;color:#94a3b8;margin-bottom:2rem;font-weight:400;max-width:600px;margin-left:auto;margin-right:auto}
+.hero h1{font-size:3.4rem;font-weight:900;letter-spacing:-2px;line-height:1.05;margin-bottom:0.75rem;color:#fff}
+.hero h1 .gradient-text{color:#2B7DE9}
+.hero-tagline{display:inline-block;font-size:0.8rem;color:#fff;font-weight:700;letter-spacing:4px;text-transform:uppercase;margin-bottom:1.5rem;padding:0.5rem 1.5rem;border:1.5px solid rgba(43,125,233,0.5);border-radius:100px;background:rgba(43,125,233,0.1)}
+.hero-subtitle{font-size:1.05rem;color:rgba(255,255,255,0.6);margin-bottom:2.5rem;font-weight:400;max-width:600px;margin-left:auto;margin-right:auto;line-height:1.7}
 .hero-ctas{display:flex;justify-content:center;gap:1rem;flex-wrap:wrap;margin-bottom:2.5rem}
 .hero-cta{display:inline-block;font-size:0.9rem;font-weight:700;padding:0.8rem 2rem;border-radius:10px;transition:all 0.25s;min-height:44px;line-height:1.5}
-.hero-cta-primary{background:linear-gradient(135deg,#2B7DE9,#1d6ad4);color:#fff;border:2px solid transparent;box-shadow:0 4px 20px rgba(43,125,233,0.3)}
-.hero-cta-primary:hover{box-shadow:0 6px 30px rgba(43,125,233,0.5);transform:translateY(-1px)}
-.hero-cta-secondary{background:transparent;color:#fff;border:2px solid rgba(255,255,255,0.25)}
-.hero-cta-secondary:hover{border-color:rgba(255,255,255,0.6);background:rgba(255,255,255,0.05)}
+.hero-cta-primary{background:#2B7DE9;color:#fff;border:2px solid #2B7DE9}
+.hero-cta-primary:hover{background:#1d6ad4;border-color:#1d6ad4;transform:translateY(-1px)}
+.hero-cta-secondary{background:transparent;color:rgba(255,255,255,0.8);border:2px solid rgba(255,255,255,0.2)}
+.hero-cta-secondary:hover{color:#fff;border-color:rgba(255,255,255,0.5)}
 .hero-stats{display:flex;justify-content:center;gap:2.5rem;flex-wrap:wrap}
 .stat{text-align:center;padding:0 0.5rem}
-.stat-num{font-size:2.25rem;font-weight:900;color:#fff;line-height:1}
-.stat-label{font-size:0.65rem;text-transform:uppercase;letter-spacing:2px;color:#64748B;margin-top:0.25rem}
-.stat-divider{width:1px;background:rgba(255,255,255,0.1);align-self:stretch}
-@media(max-width:640px){.hero{padding:3rem 1.25rem 2.5rem}.hero h1{font-size:2rem;letter-spacing:-1px}.hero-stats{gap:1.25rem}.stat-num{font-size:1.6rem}.hero-ctas{flex-direction:column;align-items:center}.hero-cta{width:100%;max-width:280px;text-align:center}.stat-divider{display:none}.hero-geo,.hero-geo2,.hero-geo3{display:none}}
+.stat-num{font-size:2.25rem;font-weight:900;color:#2B7DE9;line-height:1}
+.stat-label{font-size:0.65rem;text-transform:uppercase;letter-spacing:2px;color:rgba(255,255,255,0.4);margin-top:0.35rem}
+.stat-divider{width:1px;background:rgba(255,255,255,0.08);align-self:stretch}
+@media(max-width:640px){.hero{padding:3.5rem 1.25rem 3rem}.hero h1{font-size:2.2rem;letter-spacing:-1px}.hero-stats{gap:1.25rem}.stat-num{font-size:1.5rem}.hero-ctas{flex-direction:column;align-items:center}.hero-cta{width:100%;max-width:280px;text-align:center}.stat-divider{display:none}}
 
 /* Trust bar */
 .trust{background:#f8fafc;border-top:1px solid #e2e8f0;border-bottom:1px solid #e2e8f0;padding:1.25rem}
