--- a/site.html
+++ b/site.html
@@ -52,12 +52,12 @@ a{text-decoration:none;color:inherit}
 .hero-cta-primary:hover{background:#1d6ad4;border-color:#1d6ad4;transform:translateY(-1px)}
 .hero-cta-secondary{background:transparent;color:rgba(255,255,255,0.8);border:2px solid rgba(255,255,255,0.2)}
 .hero-cta-secondary:hover{color:#fff;border-color:rgba(255,255,255,0.5)}
-.hero-stats{display:flex;justify-content:center;gap:2.5rem;flex-wrap:wrap}
+.hero-stats{display:grid;grid-template-columns:repeat(4,auto);justify-content:center;gap:2.5rem}
 .stat{text-align:center;padding:0 0.5rem}
 .stat-num{font-size:2.25rem;font-weight:900;color:#2B7DE9;line-height:1}
 .stat-label{font-size:0.65rem;text-transform:uppercase;letter-spacing:2px;color:rgba(255,255,255,0.4);margin-top:0.35rem}
 .stat-divider{width:1px;background:rgba(255,255,255,0.08);align-self:stretch}
-@media(max-width:640px){.hero{padding:3.5rem 1.25rem 3rem}.hero h1{font-size:2.2rem;letter-spacing:-1px}.hero-stats{gap:1.25rem}.stat-num{font-size:1.5rem}.hero-ctas{flex-direction:column;align-items:center}.hero-cta{width:100%;max-width:280px;text-align:center}.stat-divider{display:none}}
+@media(max-width:640px){.hero{padding:3rem 1.25rem 2.5rem}.hero h1{font-size:2.2rem;letter-spacing:-1px}.hero-stats{grid-template-columns:repeat(2,auto);gap:1.25rem 2rem}.stat-num{font-size:1.5rem}.hero-ctas{flex-direction:column;align-items:center}.hero-cta{width:100%;max-width:280px;text-align:center}.stat-divider{display:none}}
 
 /* Trust bar */
 .trust{background:#f8fafc;border-top:1px solid #e2e8f0;border-bottom:1px solid #e2e8f0;padding:1.25rem}
@@ -72,6 +72,7 @@ a{text-decoration:none;color:inherit}
 .section-alt{background:#f8fafc}
 .section-white{background:#fff}
 .section-pad{padding:4rem 1.5rem}
+@media(max-width:768px){.section-pad{padding:2.5rem 1rem}}
 .section-inner{max-width:1280px;margin:0 auto}
 .section-header{text-align:center;margin-bottom:2.5rem}
 .section-label{font-size:0.65rem;text-transform:uppercase;letter-spacing:4px;color:#2B7DE9;font-weight:700;margin-bottom:0.4rem}
@@ -85,7 +86,7 @@ a{text-decoration:none;color:inherit}
 .why-card .ic{color:#2B7DE9;margin-bottom:1rem}
 .why-card h3{font-size:1rem;font-weight:800;color:#0A1628;margin-bottom:0.5rem}
 .why-card p{font-size:0.85rem;color:#64748B;line-height:1.6}
-@media(max-width:768px){.why-grid{grid-template-columns:1fr}}
+@media(max-width:768px){.why-grid{grid-template-columns:1fr;gap:0.75rem}.why-card{padding:1.25rem 1rem}.why-card p{font-size:0.78rem}}
 
 /* Resource cards */
 .resource-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:1.25rem;max-width:1100px;margin:0 auto}
@@ -96,7 +97,7 @@ a{text-decoration:none;color:inherit}
 .resource-card p{font-size:0.82rem;color:#64748B;line-height:1.5;flex:1;margin-bottom:1rem}
 .rc-btn{display:inline-block;font-size:0.75rem;font-weight:700;color:#2B7DE9;padding:0.4rem 0.8rem;border:1.5px solid #2B7DE9;border-radius:8px;transition:all 0.2s;min-height:32px;line-height:1.6}
 .rc-btn:hover{background:#2B7DE9;color:#fff}
-@media(max-width:768px){.resource-grid{grid-template-columns:1fr}}
+@media(max-width:768px){.resource-grid{grid-template-columns:repeat(2,1fr);gap:0.75rem}.resource-card{padding:1rem}.resource-card .rc-icon{width:36px;height:36px;margin-bottom:0.5rem}.resource-card h3{font-size:0.82rem}.resource-card p{font-size:0.72rem;margin-bottom:0.5rem}}
 
 /* Featured */
 .featured-bg{background:linear-gradient(135deg,#f0f7ff 0%,#faf5ff 50%,#f0fdfa 100%);padding:4rem 1.5rem;position:relative}
@@ -315,55 +316,6 @@ footer{background:#0A1628;color:#8E99A4;padding:3rem 1.5rem 2rem}
 </div>
 </section>
 
-<!-- RESOURCES HUB -->
-<section class="section-white section-pad" id="resources">
-<div class="section-inner">
-<div class="section-header">
-<div class="section-label">Resources</div>
-<h2 class="section-title">Your Research Toolkit</h2>
-<p class="section-sub">More than a store &mdash; we're building the most comprehensive peptide resource on the internet.</p>
-</div>
-<div class="resource-grid">
-<div class="resource-card" style="border-left-color:#2B7DE9">
-<div class="rc-icon" style="background:#2B7DE915"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#2B7DE9"><path fill="currentColor" d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"/></svg></div>
-<h3>Price Comparison Tool</h3>
-<p>Compare 387 products across 23 vendors. Find the best prices instantly.</p>
-<a href="https://frabrizio22.github.io/prc-tools/" class="rc-btn">Compare Now &rarr;</a>
-</div>
-<div class="resource-card" style="border-left-color:#10B981">
-<div class="rc-icon" style="background:#10B98115"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#10B981"><path fill="currentColor" d="M20 4H4v2h16V4zm1 10v-2l-1-5H4l-1 5v2h1v6h10v-6h4v6h2v-6h1zm-9 4H6v-4h6v4z"/></svg></div>
-<h3>Vendor Directory</h3>
-<p>Curated directory of verified research peptide vendors, organized by specialty and reputation.</p>
-<a href="#vendors" class="rc-btn">Browse Vendors &rarr;</a>
-</div>
-<div class="resource-card" style="border-left-color:#8B5CF6">
-<div class="rc-icon" style="background:#8B5CF615"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#8B5CF6"><path fill="currentColor" d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1zm0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5v11.5z"/></svg></div>
-<h3>Peptide Education</h3>
-<p>In-depth guides on research peptides &mdash; mechanisms, applications, and methodology.</p>
-<a href="#education" class="rc-btn">Start Learning &rarr;</a>
-</div>
-<div class="resource-card" style="border-left-color:#F59E0B">
-<div class="rc-icon" style="background:#F59E0B15"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#F59E0B"><path fill="currentColor" d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg></div>
-<h3>Vendor Reviews</h3>
-<p>Community-sourced vendor review sites to help you make informed decisions.</p>
-<a href="#reviews" class="rc-btn">Read Reviews &rarr;</a>
-</div>
-<div class="resource-card" style="border-left-color:#06B6D4">
-<div class="rc-icon" style="background:#06B6D415"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#06B6D4"><path fill="currentColor" d="M13 11.33L18 18H6l5-6.67V6h2v5.33zM15 4h1V2H8v2h1v2.33L4 11.84V22h16V11.84L15 6.33V4z"/></svg></div>
-<h3>Testing Labs</h3>
-<p>Independent third-party testing laboratories for peptide analysis and verification.</p>
-<a href="#labs" class="rc-btn">Find Labs &rarr;</a>
-</div>
-<div class="resource-card" style="border-left-color:#6366F1">
-<div class="rc-icon" style="background:#6366F115"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#6366F1"><path fill="currentColor" d="M18 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM6 4h5v8l-2.5-1.5L6 12V4z"/></svg></div>
-<h3>Books &amp; Reading</h3>
-<p>Recommended reading for serious peptide researchers.</p>
-<a href="#books" class="rc-btn">See List &rarr;</a>
-</div>
-</div>
-</div>
-</section>
-
 <!-- FEATURED -->
 <section class="featured-bg" id="featured">
 <div class="section-header">
@@ -542,6 +494,55 @@ footer{background:#0A1628;color:#8E99A4;padding:3rem 1.5rem 2rem}
 <div id="detailContent"></div>
 </div>
 </div>
+
+<!-- RESOURCES HUB -->
+<section class="section-white section-pad" id="resources">
+<div class="section-inner">
+<div class="section-header">
+<div class="section-label">Resources</div>
+<h2 class="section-title">Your Research Toolkit</h2>
+<p class="section-sub">More than a store &mdash; we're building the most comprehensive peptide resource on the internet.</p>
+</div>
+<div class="resource-grid">
+<div class="resource-card" style="border-left-color:#2B7DE9">
+<div class="rc-icon" style="background:#2B7DE915"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#2B7DE9"><path fill="currentColor" d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z"/></svg></div>
+<h3>Price Comparison Tool</h3>
+<p>Compare 387 products across 23 vendors. Find the best prices instantly.</p>
+<a href="https://frabrizio22.github.io/prc-tools/" class="rc-btn">Compare Now &rarr;</a>
+</div>
+<div class="resource-card" style="border-left-color:#10B981">
+<div class="rc-icon" style="background:#10B98115"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#10B981"><path fill="currentColor" d="M20 4H4v2h16V4zm1 10v-2l-1-5H4l-1 5v2h1v6h10v-6h4v6h2v-6h1zm-9 4H6v-4h6v4z"/></svg></div>
+<h3>Vendor Directory</h3>
+<p>Curated directory of verified research peptide vendors, organized by specialty and reputation.</p>
+<a href="#vendors" class="rc-btn">Browse Vendors &rarr;</a>
+</div>
+<div class="resource-card" style="border-left-color:#8B5CF6">
+<div class="rc-icon" style="background:#8B5CF615"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#8B5CF6"><path fill="currentColor" d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1zm0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5v11.5z"/></svg></div>
+<h3>Peptide Education</h3>
+<p>In-depth guides on research peptides &mdash; mechanisms, applications, and methodology.</p>
+<a href="#education" class="rc-btn">Start Learning &rarr;</a>
+</div>
+<div class="resource-card" style="border-left-color:#F59E0B">
+<div class="rc-icon" style="background:#F59E0B15"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#F59E0B"><path fill="currentColor" d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg></div>
+<h3>Vendor Reviews</h3>
+<p>Community-sourced vendor review sites to help you make informed decisions.</p>
+<a href="#reviews" class="rc-btn">Read Reviews &rarr;</a>
+</div>
+<div class="resource-card" style="border-left-color:#06B6D4">
+<div class="rc-icon" style="background:#06B6D415"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#06B6D4"><path fill="currentColor" d="M13 11.33L18 18H6l5-6.67V6h2v5.33zM15 4h1V2H8v2h1v2.33L4 11.84V22h16V11.84L15 6.33V4z"/></svg></div>
+<h3>Testing Labs</h3>
+<p>Independent third-party testing laboratories for peptide analysis and verification.</p>
+<a href="#labs" class="rc-btn">Find Labs &rarr;</a>
+</div>
+<div class="resource-card" style="border-left-color:#6366F1">
+<div class="rc-icon" style="background:#6366F115"><svg class="ic ic-lg" viewBox="0 0 24 24" style="color:#6366F1"><path fill="currentColor" d="M18 2H6c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM6 4h5v8l-2.5-1.5L6 12V4z"/></svg></div>
+<h3>Books &amp; Reading</h3>
+<p>Recommended reading for serious peptide researchers.</p>
+<a href="#books" class="rc-btn">See List &rarr;</a>
+</div>
+</div>
+</div>
+</section>
 
 <!-- VENDOR DIRECTORY -->
 <section class="info-section section-alt" id="vendors">
