--- a/site.html
+++ b/site.html
@@ -42,7 +42,7 @@ a{text-decoration:none;color:inherit}
 .hero::after{content:"";position:absolute;bottom:0;left:0;right:0;height:1px;background:linear-gradient(90deg,transparent,#2B7DE9,#06B6D4,transparent);pointer-events:none}
 .hero-geo,.hero-geo2,.hero-geo3{display:none}
 .hero-inner{max-width:850px;margin:0 auto;position:relative;z-index:1}
-.hero h1{font-size:3.4rem;font-weight:900;letter-spacing:-2px;line-height:1.05;margin-bottom:0.75rem;color:#fff}
+.hero h1{font-size:2.8rem;font-weight:900;letter-spacing:-1.5px;line-height:1.05;margin-bottom:0.5rem;color:#fff}
 .hero h1 .gradient-text{color:#2B7DE9}
 .hero-tagline{font-size:0.75rem;color:rgba(255,255,255,0.5);font-weight:600;letter-spacing:5px;text-transform:uppercase;margin-bottom:1.5rem}
 .hero-subtitle{font-size:1.05rem;color:rgba(255,255,255,0.6);margin-bottom:2.5rem;font-weight:400;max-width:600px;margin-left:auto;margin-right:auto;line-height:1.7}
@@ -57,7 +57,7 @@ a{text-decoration:none;color:inherit}
 .stat-num{font-size:2.25rem;font-weight:900;color:#2B7DE9;line-height:1}
 .stat-label{font-size:0.65rem;text-transform:uppercase;letter-spacing:2px;color:rgba(255,255,255,0.4);margin-top:0.35rem}
 .stat-divider{width:1px;background:rgba(255,255,255,0.08);align-self:stretch}
-@media(max-width:640px){.hero{padding:3rem 1.25rem 2.5rem}.hero h1{font-size:2.2rem;letter-spacing:-1px}.hero-stats{grid-template-columns:repeat(2,auto);gap:1.25rem 2rem}.stat-num{font-size:1.5rem}.hero-ctas{flex-direction:column;align-items:center}.hero-cta{width:100%;max-width:280px;text-align:center}.stat-divider{display:none}}
+@media(max-width:640px){.hero{padding:2.5rem 1.25rem 2rem}.hero h1{font-size:1.6rem;letter-spacing:-0.5px}.hero-stats{grid-template-columns:repeat(2,auto);gap:1.25rem 2rem}.stat-num{font-size:1.5rem}.hero-ctas{flex-direction:column;align-items:center}.hero-cta{width:100%;max-width:280px;text-align:center}.stat-divider{display:none}}
 
 /* Trust bar */
 .trust{background:#f8fafc;border-top:1px solid #e2e8f0;border-bottom:1px solid #e2e8f0;padding:1.25rem}
@@ -264,7 +264,7 @@ footer{background:#0A1628;color:#8E99A4;padding:3rem 1.5rem 2rem}
 <div class="hero-geo2"></div>
 <div class="hero-geo3"></div>
 <div class="hero-inner">
-<h1><span class="gradient-text">PEPTIDE RESOURCE<br>CENTER</span></h1>
+<h1><span class="gradient-text">PEPTIDE RESOURCE CENTER</span></h1>
 <div class="hero-tagline">The Peptide Authority</div>
 <p class="hero-subtitle">Your comprehensive destination for research peptide resources, education, and premium products</p>
 <div class="hero-ctas">
