--- a/site.html
+++ b/site.html
@@ -8,7 +8,7 @@
 *{margin:0;padding:0;box-sizing:border-box}
 html{scroll-behavior:smooth}
 body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;color:#1a1a2e;background:#fff;-webkit-text-size-adjust:100%;-webkit-font-smoothing:antialiased}
-.site-header{position:sticky;top:0;z-index:200;background:#fff;border-bottom:1px solid #e5e7eb;padding:12px 20px;display:flex;align-items:center;justify-content:space-between}
+.site-header{position:sticky;top:0;z-index:200;background:#fff;border-bottom:1px solid #e5e7eb;padding:12px 20px;display:flex;align-items:center;justify-content:space-between;position:relative;position:sticky}
 .header-brand{display:flex;flex-direction:column}
 .header-title{font-size:1.2rem;font-weight:800;color:#0A1628;letter-spacing:-0.5px;line-height:1.2}
 .header-sub{font-size:0.6rem;text-transform:uppercase;letter-spacing:2.5px;color:#2B7DE9;font-weight:700;border-top:1.5px solid #2B7DE9;padding-top:3px;margin-top:3px;display:inline-block}
@@ -28,7 +28,16 @@ body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Ar
 .btn-outline{background:transparent;color:#fff;border:1.5px solid rgba(255,255,255,0.3);padding:10px 24px;border-radius:8px;font-size:0.82rem;font-weight:700;cursor:pointer;text-decoration:none}
 .btn-primary:hover{background:#1D6AD4}
 .btn-outline:hover{border-color:#fff}
-@media(max-width:640px){.hero{padding:32px 16px 28px}.hero-title{font-size:1.5rem}}
+.hamburger{display:none;background:none;border:none;cursor:pointer;padding:8px;flex-direction:column;gap:4px}
+.hamburger span{display:block;width:20px;height:2px;background:#0A1628;border-radius:2px;transition:all 0.2s}
+.hamburger.open span:nth-child(1){transform:rotate(45deg) translate(4px,4px)}
+.hamburger.open span:nth-child(2){opacity:0}
+.hamburger.open span:nth-child(3){transform:rotate(-45deg) translate(4px,-4px)}
+.mobile-menu{display:none;position:absolute;top:100%;left:0;right:0;background:#fff;border-bottom:1px solid #e5e7eb;box-shadow:0 8px 20px rgba(0,0,0,0.08);padding:8px 0}
+.mobile-menu.open{display:block}
+.mobile-menu label{display:block;padding:12px 24px;font-size:0.88rem;font-weight:600;color:#334155;cursor:pointer}
+.mobile-menu label:hover{background:#f8f9fa;color:#2B7DE9}
+@media(max-width:640px){.header-nav{display:none}.hamburger{display:flex}.hero{padding:32px 16px 28px}.hero-title{font-size:1.5rem}}
 .trust-bar{background:#f8f9fa;padding:10px 20px;text-align:center;font-size:0.72rem;color:#64748b;font-weight:500;letter-spacing:0.3px;border-bottom:1px solid #e5e7eb}
 .tab-radio{display:none}
 .tab-bar{position:sticky;top:49px;z-index:150;background:#fff;border-bottom:1px solid #e5e7eb;display:flex;justify-content:center;gap:0}
@@ -130,12 +139,18 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 <div class="header-sub">The Peptide Authority</div>
 </div>
 <nav class="header-nav">
-<label for="tab-resources">Home</label>
 <label for="tab-resources">Resources</label>
 <label for="tab-shop">Shop</label>
 <label for="tab-learn">Learn</label>
 <label for="tab-contact">Contact</label>
 </nav>
+<button class="hamburger" aria-label="Menu"><span></span><span></span><span></span></button>
+<div class="mobile-menu">
+<label for="tab-resources">Resources</label>
+<label for="tab-shop">Shop</label>
+<label for="tab-learn">Learn</label>
+<label for="tab-contact">Contact</label>
+</div>
 </header>
 
 <section class="hero">
@@ -433,6 +448,37 @@ function filterCat(btn, cat) {
 document.addEventListener("keydown", function(e) {
   if (e.keyCode === 27) closeModal();
 });
+
+// Tab fallback for iOS Safari
+var tabLabels = document.querySelectorAll(".tab-bar label, .header-nav label");
+for (var t = 0; t < tabLabels.length; t++) {
+  tabLabels[t].addEventListener("click", function() {
+    var forId = this.getAttribute("for");
+    if (forId) {
+      var radio = document.getElementById(forId);
+      if (radio) radio.checked = true;
+    }
+  });
+}
+
+// Mobile hamburger toggle
+var burger = document.querySelector(".hamburger");
+var mobMenu = document.querySelector(".mobile-menu");
+if (burger && mobMenu) {
+  burger.addEventListener("click", function() {
+    mobMenu.classList.toggle("open");
+    burger.classList.toggle("open");
+  });
+  var mobLabels = mobMenu.querySelectorAll("label");
+  for (var m = 0; m < mobLabels.length; m++) {
+    mobLabels[m].addEventListener("click", function() {
+      mobMenu.classList.remove("open");
+      burger.classList.remove("open");
+      var forId = this.getAttribute("for");
+      if (forId) document.getElementById(forId).checked = true;
+    });
+  }
+}
 </script>
 </body>
 </html>
