--- a/site.html
+++ b/site.html
@@ -51,7 +51,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Ar
 #tab-shop:checked ~ .tabs-container .content-shop{display:block}
 #tab-learn:checked ~ .tabs-container .content-learn{display:block}
 #tab-contact:checked ~ .tabs-container .content-contact{display:block}
-@media(max-width:640px){.tab-bar label{padding:10px 14px;font-size:0.75rem}}
+@media(max-width:640px){.tab-bar{justify-content:space-evenly}.tab-bar label{padding:10px 8px;font-size:0.72rem;flex:1;text-align:center}}
 .content-wrap{max-width:1100px;margin:0 auto;padding:32px 20px}
 @media(max-width:640px){.content-wrap{padding:20px 16px}}
 .res-banner{background:linear-gradient(135deg,#0A1628 0%,#1a2744 100%);border-radius:12px;padding:28px 24px;color:#fff;margin-bottom:28px}
