--- a/site.html
+++ b/site.html
@@ -42,16 +42,16 @@ body{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Ar
 @media(max-width:640px){.header-nav{display:none}.hamburger{display:flex}.hero{padding:32px 16px 28px}.hero-title{font-size:1.5rem}}
 .trust-bar{background:#f8f9fa;padding:10px 20px;text-align:center;font-size:0.72rem;color:#64748b;font-weight:500;letter-spacing:0.3px;border-bottom:1px solid #e5e7eb}
 .tab-radio{display:none}
-.tab-bar{position:sticky;top:52px;z-index:150;background:#fff;border-bottom:1px solid #e5e7eb;display:flex;justify-content:center;gap:0}
-.tab-bar label{padding:12px 20px;font-size:0.82rem;font-weight:600;color:#64748b;cursor:pointer;border-bottom:2.5px solid transparent;transition:all 0.15s}
-.tab-bar label:hover{color:#0A1628}
-#tab-resources:checked ~ .tab-bar label[for="tab-resources"],#tab-shop:checked ~ .tab-bar label[for="tab-shop"],#tab-learn:checked ~ .tab-bar label[for="tab-learn"],#tab-contact:checked ~ .tab-bar label[for="tab-contact"]{color:#2B7DE9;border-bottom-color:#2B7DE9}
+.tab-bar{position:sticky;top:52px;z-index:150;background:#f8f9fa;border-bottom:1px solid #e5e7eb;display:flex;justify-content:center;gap:4px;padding:6px 8px}
+.tab-bar label{padding:8px 16px;font-size:0.78rem;font-weight:600;color:#64748b;cursor:pointer;border-radius:8px;transition:all 0.15s;background:transparent}
+.tab-bar label:hover{background:#e5e7eb;color:#0A1628}
+#tab-resources:checked ~ .tab-bar label[for="tab-resources"],#tab-shop:checked ~ .tab-bar label[for="tab-shop"],#tab-learn:checked ~ .tab-bar label[for="tab-learn"],#tab-contact:checked ~ .tab-bar label[for="tab-contact"]{color:#fff;background:#0A1628}
 .tab-content{display:none}
 #tab-resources:checked ~ .tabs-container .content-resources{display:block}
 #tab-shop:checked ~ .tabs-container .content-shop{display:block}
 #tab-learn:checked ~ .tabs-container .content-learn{display:block}
 #tab-contact:checked ~ .tabs-container .content-contact{display:block}
-@media(max-width:640px){.tab-bar{justify-content:space-evenly}.tab-bar label{padding:10px 8px;font-size:0.72rem;flex:1;text-align:center}}
+@media(max-width:640px){.tab-bar{justify-content:space-evenly;padding:6px}.tab-bar label{padding:7px 6px;font-size:0.7rem;flex:1;text-align:center;border-radius:6px}}
 .content-wrap{max-width:1100px;margin:0 auto;padding:32px 20px}
 @media(max-width:640px){.content-wrap{padding:20px 16px}}
 .res-banner{background:linear-gradient(135deg,#0A1628 0%,#1a2744 100%);border-radius:12px;padding:28px 24px;color:#fff;margin-bottom:28px}
