--- a/site.html
+++ b/site.html
@@ -161,8 +161,8 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 <div class="hero-auth">The Peptide Authority</div>
 <p class="hero-sub">Your comprehensive destination for research peptide resources, education, and premium products</p>
 <div class="hero-stats">
-<span><strong>44+</strong> Products</span>
-<span><strong>23+</strong> Vendors Compared</span>
+<span><strong>44</strong> Products</span>
+<span><strong>23</strong> Vendors Compared</span>
 <span><strong>10</strong> Categories</span>
 <span><strong>&ge;98%</strong> Purity</span>
 </div>
