Remove duplicate placeholder vendor directory section

--- a/prc_site_mockup_final.html
+++ b/prc_site_mockup_final.html
@@ -198,15 +198,7 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 <a href="#testing-labs" class="quick-tile" onclick="document.getElementById('testing-labs').scrollIntoView({behavior:'smooth'});return false"><h4>Testing Labs</h4><p>Third-party analysis</p></a>
 </div>
 
-<div class="res-section" id="vendor-dir">
-<h3>Vendor Directory</h3>
-<p>Curated list of research peptide suppliers organized by region and specialty.</p>
-<div class="vendor-cards">
-<div class="vendor-card"><h4>US-Based Vendors</h4><p>Domestic suppliers with fast shipping, US-based customer support, and domestic quality testing.</p></div>
-<div class="vendor-card"><h4>International Vendors</h4><p>Global suppliers offering competitive pricing with international shipping options.</p></div>
-<div class="vendor-card"><h4>Specialty Vendors</h4><p>Niche suppliers focusing on rare peptides, custom synthesis, and specialty compounds.</p></div>
-</div>
-</div>
+<!-- vendor directory moved to Complete Vendor Directory section below -->
 
 <div class="res-section" id="review-resources">
 <h3>Review Resources</h3>
