Sync site.html with latest mockup (vendor directory fix)

--- a/site.html
+++ b/site.html
@@ -192,21 +192,13 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 </div>
 
 <div class="quick-grid">
-<a href="#vendor-dir" class="quick-tile" onclick="document.getElementById('vendor-dir').scrollIntoView({behavior:'smooth'});return false"><h4>Vendor Directory</h4><p>Trusted suppliers</p></a>
+<a href="#vendor-dir" class="quick-tile" onclick="document.getElementById('vendor-dir').scrollIntoView({behavior:'smooth'});return false"><h4>Vendor Directory</h4><p>329 vendors reviewed</p></a>
 <label for="tab-learn" class="quick-tile"><h4>Peptide Education</h4><p>Learn the science</p></label>
 <a href="#review-resources" class="quick-tile" onclick="document.getElementById('review-resources').scrollIntoView({behavior:'smooth'});return false"><h4>Vendor Reviews</h4><p>Community feedback</p></a>
 <a href="#testing-labs" class="quick-tile" onclick="document.getElementById('testing-labs').scrollIntoView({behavior:'smooth'});return false"><h4>Testing Labs</h4><p>Third-party analysis</p></a>
 </div>
 
-<div class="res-section" id="vendor-dir">
-<h3>Vendor Directory</h3>
-<p>Curated list of research peptide suppliers organized by region and specialty.</p>
-<div class="vendor-cards">
-<div class="vendor-card"><h4>US-Based Vendors</h4><p>Domestic suppliers with fast shipping, US-based customer support, and domestic quality testing.</p></div>
-<div class="vendor-card"><h4>International Vendors</h4><p>Global suppliers offering competitive pricing with international shipping options.</p></div>
-<div class="vendor-card"><h4>Specialty Vendors</h4><p>Niche suppliers focusing on rare peptides, custom synthesis, and specialty compounds.</p></div>
-</div>
-</div>
+<!-- placeholder removed -->
 
 <div class="res-section" id="review-resources">
 <h3>Review Resources</h3>
@@ -234,7 +226,7 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 </div>
 
 <div class="res-section">
-<h3>Complete Vendor Directory</h3>
+<h3 id="vendor-dir">Complete Vendor Directory</h3>
 <p style="margin-bottom:12px">Browse 329 research peptide vendors organized by trust level. All data sourced from peptideresourcecenter.com (Feb 2026).</p>
 <div class="vendor-controls">
 <div class="vendor-filter-pills">
