--- a/site.html
+++ b/site.html
@@ -289,6 +289,13 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 <input type="text" class="vendor-search" id="vendorSearch" placeholder="Search vendors...">
 <div class="vendor-count" id="vendorCount">Showing 326 vendors</div>
 </div>
+<div style="background:linear-gradient(135deg,#0A1628 0%,#1a2744 100%);border-radius:10px;padding:20px;margin-bottom:16px;display:flex;align-items:center;justify-content:space-between;flex-wrap:wrap;gap:12px">
+<div>
+<div style="font-size:0.85rem;font-weight:800;color:#fff">Peptide Resource Center</div>
+<div style="font-size:0.72rem;color:rgba(255,255,255,0.6);margin-top:4px">44+ research peptides · ≥98% purity · Fast shipping</div>
+</div>
+<label for="tab-shop" style="background:#2B7DE9;color:#fff;border:none;padding:8px 20px;border-radius:8px;font-size:0.78rem;font-weight:700;cursor:pointer;white-space:nowrap">Shop Our Products →</label>
+</div>
 <div class="vendor-list" id="vendorList"><div class="vendor-row" data-tier="green" data-name="flawless compounds"><div class="vendor-name">Flawless Compounds</div><span class="vendor-tier" style="color:#10B981">Trusted</span></div>
 <div class="vendor-row" data-tier="green" data-name="frozen peptides"><div class="vendor-name">Frozen Peptides</div><span class="vendor-tier" style="color:#10B981">Trusted</span></div>
 <div class="vendor-row" data-tier="green" data-name="genetic peptide"><div class="vendor-name">Genetic Peptide</div><span class="vendor-tier" style="color:#10B981">Trusted</span></div>
