--- a/site.html
+++ b/site.html
@@ -287,8 +287,7 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 <div class="vendor-filter-pills">
 <button class="v-pill active" onclick="filterVendors(this,'all')">All (326)</button>
 <button class="v-pill" onclick="filterVendors(this,'green')" style="--v-color:#10B981">Trusted (162)</button>
-<button class="v-pill" onclick="filterVendors(this,'yellow')" style="--v-color:#F59E0B">Caution (2)</button>
-<button class="v-pill" onclick="filterVendors(this,'orange')" style="--v-color:#F97316">Warning (23)</button>
+<button class="v-pill" onclick="filterVendors(this,'orange')" style="--v-color:#F97316">Warning (25)</button>
 <button class="v-pill" onclick="filterVendors(this,'red')" style="--v-color:#EF4444">Flagged (139)</button>
 </div>
 <input type="text" class="vendor-search" id="vendorSearch" placeholder="Search vendors...">
@@ -486,8 +485,8 @@ footer{background:#0A1628;padding:32px 20px;text-align:center}
 <div class="vendor-row" data-tier="orange" data-name="prevail peptides"><div class="vendor-name">Prevail Peptides</div><span class="vendor-tier" style="color:#F97316">Warning</span><div class="vendor-notes">Website unavailable at time of review</div></div>
 <div class="vendor-row" data-tier="orange" data-name="revital tide"><div class="vendor-name">Revital Tide</div><span class="vendor-tier" style="color:#F97316">Warning</span><div class="vendor-notes">In-house testing only; no third-party verification</div></div>
 <div class="vendor-row" data-tier="orange" data-name="s 1 research"><div class="vendor-name">S 1 Research</div><span class="vendor-tier" style="color:#F97316">Warning</span><div class="vendor-notes">Registration required; COAs not independently verifiable</div></div>
-<div class="vendor-row" data-tier="yellow" data-name="swiss chem"><div class="vendor-name">Swiss Chem</div><span class="vendor-tier" style="color:#F59E0B">Caution</span><div class="vendor-notes">In-house testing only; no third-party verification</div></div>
-<div class="vendor-row" data-tier="yellow" data-name="the pep effect"><div class="vendor-name">The Pep Effect</div><span class="vendor-tier" style="color:#F59E0B">Caution</span><div class="vendor-notes">Password-protected site</div></div>
+<div class="vendor-row" data-tier="orange" data-name="swiss chem"><div class="vendor-name">Swiss Chem</div><span class="vendor-tier" style="color:#F97316">Warning</span><div class="vendor-notes">In-house testing only; no third-party verification</div></div>
+<div class="vendor-row" data-tier="orange" data-name="the pep effect"><div class="vendor-name">The Pep Effect</div><span class="vendor-tier" style="color:#F97316">Warning</span><div class="vendor-notes">Password-protected site</div></div>
 <div class="vendor-row" data-tier="red" data-name="2pepmoms"><div class="vendor-name">2PepMoms</div><span class="vendor-tier" style="color:#EF4444">Flagged</span><div class="vendor-notes">No COAs available</div></div>
 <div class="vendor-row" data-tier="red" data-name="808 research"><div class="vendor-name">808 Research</div><span class="vendor-tier" style="color:#EF4444">Flagged</span><div class="vendor-notes">COAs not posted publicly</div></div>
 <div class="vendor-row" data-tier="red" data-name="99x peptides"><div class="vendor-name">99X Peptides</div><span class="vendor-tier" style="color:#EF4444">Flagged</span><div class="vendor-notes">No COAs available</div></div>
